# sociosync-env

./: .gitignore  Dockerfile  README.md  __init__.py  app.py  baseline.py  demo.html  env.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py
tasks/: easy.py  hard.py  medium.py
