[project]
name = "sociosync-env"
version = "0.1.0"
description = "SocioSync OpenEnv Environment"
authors = [{ name = "Shweta" }]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["."]