[project]
name = "rescuenet-env"
version = "0.1.0"
description = "Disaster response resource allocation RL environment (RescueNet)"
authors = [{ name = "Shweta" }]

dependencies = [
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0",
    "openai"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["rescuenet_env"]
package-dir = {"rescuenet_env" = "."}